--- a/data.html
+++ b/data.html
@@ -31,7 +31,7 @@
         <h6>Number of people in room  <br><h1 id="count"></h1></h6>
         </div>
         </div>
-        <h2 class="danger red" id=alert></h2>
+        <h3 style="color: red;" id=alert></h3>
     </center>
         
     </div>
